# dj-tool

./: .gitignore  CLAUDE.md  CMakeLists.txt
.agents/workflows/: start-work.md
.claude/agents/: architect.md  audio-engine.md  build-infra.md  edit-system.md  git-workflow.md  orchestrator.md  stem-pipeline.md  timing-clock.md  ui-component.md
app/: main.cpp
docs/: dj_edit_lab_functioneel_requirements_document_v_1.md  dj_edit_lab_project_setup_claude.md  dj_edit_lab_stem_editing_system_specification_v_1.md  dj_edit_lab_ux_feedback_perceived_latency_specification_v_1.md  dj_edit_lab_vertical_slice_development_plan_v_1.md
dsp/: EditSystem.cpp  EditSystem.h
engine/: AudioEngine.cpp  AudioEngine.h  AudioEvent.h  EventScheduler.cpp  EventScheduler.h  MasterClock.cpp  MasterClock.h
ui/: MainComponent.cpp  MainComponent.h  TimelineComponent.cpp  TimelineComponent.h
